# grcache

./: .gitignore  Cargo.toml  Earthfile  README.md  grcache_config.yaml
.zed/: settings.json
docs/: usage.md
grcache-cli/: Cargo.toml  build.rs  foob
grcache-cli/spec/: grcache_service_crd.patch  grcache_service_crd.yaml  grcache_service_crd_patched.yaml
grcache-cli/src/: main.rs
grcache-proxy/: .gitignore  Cargo.toml
grcache-proxy/src/: lib.rs  main.rs  proxy.rs  service_store.rs  tracing.rs
grcache-proxy/src/cache/: local.rs  mod.rs  redis_replicas.rs
grcache-proxy/src/discovery/: dns.rs  mod.rs
grcache-proxy/src/grpc/: hash.rs  headers.rs  mod.rs  status.rs
grcache-proxy/src/proxy/: logic.rs  mod.rs
grcache-proxy/src/test_util/: mock_storage.rs  mod.rs  proxy.rs
grcache-proxy/tests/: proxy.rs
grcache-proxy/tests/data/: buf.yaml  build_descriptors.sh  proto_descriptors.binpb  test_service.proto
grcache-shared/: Cargo.toml  build.rs
grcache-shared/src/: field_ref.rs  health.rs  lib.rs  resource_change.rs
grcache-shared/src/config/: context.rs  crd.rs  mod.rs
grcache-shared/src/proto/: mod.rs
grcache-shared/src/service/: descriptor_set.rs  mod.rs  qualified_service.rs
grcache-shared/src/test/: grpc_client.rs  grpc_server.rs  proxy.rs
proto/: buf.yaml
proto/grcache/: options.proto
proto_test/: buf.yaml.old  build.sh  dummy_service.proto  grcache-service-test.yaml  image.binpb  make_k8s_resource.sh
