[package]
name = "grcache-shared"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

kube = { version = "0.98.0", features = ["derive", "runtime"] }
kube-derive = { version = "0.98.0" }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
schemars = "0.8.21"
protobuf = "3.7.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = [
    "fs",
    "io-util",
    "macros",
    "sync",
    "test-util",
] }
anyhow = "1.0.95"
sha2 = "0.10.8"
base64 = "0.22.1"
async-stream = "0.3.6"
futures = "0.3.31"

[features]
default = ["internal"]
internal = []

[build-dependencies]
protobuf-codegen = "3.7.1"
